<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DataSetFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_padding_bottom"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/select_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_margin_ten"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/select_test_data" />

            <LinearLayout
                android:id="@+id/load_buttons"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_margin_bottom"
                android:layout_below="@id/select_label">
                <Button
                    android:id="@+id/buttonOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedgreybutton"
                    android:elevation="12dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/example_1_button_title"
                    android:textColor="#797474"/>
                <Button
                    android:id="@+id/buttonTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedgreybutton"
                    android:elevation="12dp"
                    android:text="@string/example_2_button_title"
                    android:textColor="#797474"/>
                <Button
                    android:id="@+id/buttonThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedgreybutton"
                    android:elevation="12dp"
                    android:layout_marginLeft="6dp"
                    android:text="@string/example_3_button_title"
                    android:textColor="#797474"/>
            </LinearLayout>

            <TextView
                android:id="@+id/run_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/load_buttons"
                android:layout_marginBottom="@dimen/activity_margin_ten"
                android:text="@string/go_message" />

            <Button
                android:id="@+id/buttonGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/run_label"
                android:layout_marginBottom="@dimen/activity_margin_bottom"
                android:background="@drawable/roundedbutton"
                android:elevation="12dp"
                android:enabled="false"
                android:text="@string/run_button_title"
                android:textColor="#e9e9e9"/>

            <TextView
                android:id="@+id/grid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/buttonGo"
                android:layout_marginBottom="@dimen/activity_margin_five"
                android:text="@string/grid_contents_title" />

            <TextView
                android:id="@+id/grid_contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/grid_label"
                android:layout_marginBottom="@dimen/activity_margin_bottom"
                android:padding="@dimen/activity_margin_ten"
                android:fontFamily="monospace"
                android:text="@string/grid_contents_default" />

            <TextView
                android:id="@+id/results_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/grid_contents"
                android:layout_marginBottom="@dimen/activity_margin_five"
                android:text="@string/results_title" />

            <LinearLayout
                android:id="@+id/results_layout"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/activity_margin_ten"
                android:layout_below="@id/results_label">
                <TextView
                    android:id="@+id/results_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="monospace" />
                <TextView
                    android:id="@+id/results_total_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="monospace"
                    android:text="@string/no_results" />
                <TextView
                    android:id="@+id/results_path_taken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="monospace" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
