<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CustomDataInputFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/select_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_margin_ten"
                android:text="@string/enter_custom_data_set_message"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/custom_grid_contents"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_margin_bottom"
                android:layout_below="@id/select_label"
                android:maxLines="10"
                android:minLines="1" />

            <TextView
                android:id="@+id/run_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/custom_grid_contents"
                android:layout_marginBottom="@dimen/activity_margin_ten"
                android:text="@string/go_message" />

            <Button
                android:id="@+id/go_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/run_label"
                android:layout_marginBottom="@dimen/activity_margin_bottom"
                android:enabled="false"
                android:background="@drawable/roundedbutton"
                android:elevation="12dp"
                android:text="@string/run_button_title"
                android:textColor="#e9e9e9"/>

            <TextView
                android:id="@+id/grid_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/go_button"
                android:layout_marginBottom="@dimen/activity_margin_five"
                android:text="@string/grid_contents_title" />

            <TextView
                android:id="@+id/grid_contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/grid_label"
                android:layout_marginBottom="@dimen/activity_margin_bottom"
                android:padding="@dimen/activity_margin_ten"
                android:fontFamily="monospace"
                android:text="@string/grid_contents_default" />

            <TextView
                android:id="@+id/results_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/grid_contents"
                android:layout_marginBottom="@dimen/activity_margin_five"
                android:text="@string/results_title" />

            <LinearLayout
                android:id="@+id/results_layout"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/activity_margin_ten"
                android:layout_below="@id/results_label">
                <TextView
                    android:id="@+id/results_success"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="monospace" />
                <TextView
                    android:id="@+id/results_total_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="monospace"
                    android:text="@string/no_results" />
                <TextView
                    android:id="@+id/results_path_taken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="monospace" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
